--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -1,4 +1,11 @@
 
-body{
+body {
   background: skyblue;
+  position: relative;
+  min-height: 100%;
+  min-height: 100vh;
+}
+footer {
+  position: absolute;
+  right: 0;bottom:0;left:0;
 }
