--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -9,3 +9,9 @@ footer {
   position: absolute;
   right: 0;bottom:0;left:0;
 }
+
+#add-recipe{
+  position: absolute;
+  bottom: 195px;
+  right: 600px;
+}
