--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -5,9 +5,9 @@ body {
   min-height: 100%;
   min-height: 100vh;
 }
-footer {
+#recipe-footer {
   position: absolute;
-  right: 0;bottom:0;left:0;
+  right: 0px;bottom:0px;left:0px;
 }
 
 #add-recipe{
