recipe button appended in footer

--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -10,7 +10,9 @@ body {
   overflow: hidden;
 }
 
-
+#add-recipe{
+  text-align: right
+}
 #recipe-footer {
   position: absolute;
   right: 0px;bottom:0px;left:0px;
